force-app/main/default/objects/Account/fields/Output__c.field-meta.xml
<CustomField>
    <fullName>Output__c</fullName>
    <label>Geocode Output</label>
    <type>Text</type>
    <length>255</length>
</CustomField>