force-app/main/default/objects/Account/fields/Shipping_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Latitude__c</fullName>
    <formula>ShippingLatitude</formula>
    <label>Shipping Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>