force-app/main/default/objects/Account/fields/Shipping_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Longitude__c</fullName>
    <formula>ShippingLongitude</formula>
    <label>Shipping Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>